--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                     <li><a href="#">HOME</a></li>
-                    <li><a href="#">TEAM</a></li>
+                    <li><a href="#team">TEAM</a></li>
                     <li><a href="#">SERVICES</a></li>
                     <li><a href="#">PORTFOLIO</a></li>
                     <li><a href="#">CARRER</a></li>
