--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <p class="mid-txt">We have a great team behind the magical works we do </p>
 
-    <section class="team">
+    <section class="team" id="team">
 
         <div class="team-container">
 
